# farm

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: bme680_calibration.py  main.py  read_ads1115.py  read_am2320.py  read_bme680.py  read_camera.py  read_ds18p20.py  read_gy302.py
tests/: test_placeholder.py
